--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -160,9 +160,9 @@ Items can be selected, and depending on the page, different options may be appli
 
 @* Loading content *@
 @code {
-	///Must resemble this order: path, date_taken, date_added, starred, uuid, thumbnail, description, date_deleted
+	///Must resemble this order: path, id, date_taken, date_added, starred, description, date_deleted, thumbnail
 	[Parameter]
-	public required string Columns { get; set; } = "l.path, l.date_taken, l.date_added, l.starred, l.uuid, l.thumbnail, l.description, l.date_deleted";
+	public required string Columns { get; set; } = "l.path, l.id, l.date_taken, l.date_added, l.starred, l.description, l.date_deleted, l.thumbnail";
 
 	[Parameter]
 	public required string Table { get; set; } = "library AS l";
