Change 2 "False" → "false"

--- a/MemoryMosaic/Pages/LCV/Home.razor
+++ b/MemoryMosaic/Pages/LCV/Home.razor
@@ -2,4 +2,4 @@
 
 <title>Home - MemoryMosaic</title>
 
-<LibraryContentViewer NoItemsText="Import some items to get started" Where="date_taken IS NOT NULL AND separate = False"/>
+<LibraryContentViewer NoItemsText="Import some items to get started" Where="date_taken IS NOT NULL AND separate = false"/>
