--- a/MemoryMosaic/Pages/LCV/No Date Taken.razor
+++ b/MemoryMosaic/Pages/LCV/No Date Taken.razor
@@ -2,4 +2,4 @@
 
 <title>No Date Taken - MemoryMosaic</title>
 
-<LibraryContentViewer NoItemsText="Items Without a Date Taken Appear Here" Where="date_taken IS NULL AND separate = False"/>
+<LibraryContentViewer NoItemsText="Items Without a Date Taken Appear Here" Where="date_taken IS NULL AND separate = false"/>
