--- a/MemoryMosaic/Pages/Maintenance/Backups.razor
+++ b/MemoryMosaic/Pages/Maintenance/Backups.razor
@@ -76,14 +76,12 @@
         Directory.CreateDirectory(backupFolder);
         Parallel.ForEach(C.LoadEntireLibraryTable(), row =>
         {
-            string srcFilePath = Path.Join(S.libFolderPath, row.Path);
-            string destFilePath = Path.Join(backupFolder, row.Path);
-
-            string dtFolderFull = Path.Combine(backupFolder, Path.GetDirectoryName(row.Path)!);
-            if (!Directory.Exists(dtFolderFull))
-                Directory.CreateDirectory(dtFolderFull);
+           string dtFolderPath = Path.Combine(backupFolder, Path.GetDirectoryName(row.Path)!);
+            if (!Directory.Exists(dtFolderPath))
+                Directory.CreateDirectory(dtFolderPath);
             
-            File.Copy(srcFilePath, destFilePath);
+            string destFilePath = Path.Join(backupFolder, row.Path);
+            File.Copy(row.FullPath, destFilePath);
         });
         L.LogLine("Finish copying mm_library", LogLevel.Debug);
         
