--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -490,10 +490,8 @@ Items can be selected, and depending on the page, different options may be appli
 		foreach (LibraryItem item in Content)
 		{
 			if (!SelectedItems.Contains(item.Id)) continue;
-			string shortPath = item.Path;
-			string fullPath = Path.Combine(S.libFolderPath, shortPath);
-			string destPath = Path.Combine(zipFolderPath, Path.GetFileName(shortPath));
-			File.Copy(fullPath, destPath);
+			string destPath = Path.Combine(zipFolderPath, Path.GetFileName(item.Path));
+			File.Copy(item.FullPath, destPath);
 		}
 
 		ClearChecks();
