Fix some things not using L.LogException

--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -329,7 +329,7 @@
         }
         catch (NpgsqlException e)
         {
-            Console.WriteLine("Error in RunQuery. " + e.Message);
+            L.LogException(e);
         }
         finally
         {
