Move enums from /Backend/Enums to /Enums/

--- a/MemoryMosaic/_Imports.razor
+++ b/MemoryMosaic/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using MemoryMosaic
+@using MemoryMosaic.Enums
 @using MemoryMosaic.Shared
 @using MemoryMosaic.Shared.Buttons
 @using MemoryMosaic.Shared.Import
