--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -106,7 +106,7 @@ Items can be selected, and depending on the page, different options may be appli
 	<div class="load-div" style="@bottomLoader.Visibility.Style" @onmouseover="@bottomLoader.AddContent" @onscroll="@bottomLoader.AddContent"></div>
 </main>
 
-<FullscreenViewer @ref="@fv" T="@LibraryItem" Content="@Content" CollectionSelector="@cs" RerenderParent="@StateHasChanged" TopLoader="@topLoader" BottomLoader="@bottomLoader" RestoreButtonClick="@RestoreButtonClick" DeleteButtonClick="@DeleteButtonClick" TrashPage="@TrashPage"/>
+<FullscreenViewer @ref="@fv" T="@LibraryItem" Content="@Content" CollectionSelector="@cs" RerenderParent="@StateHasChanged" TopLoader="@topLoader" BottomLoader="@bottomLoader" RestoreButtonClick="@RestoreButtonClick" DeleteButtonClick="@DeleteButtonClick" PageName="@PageName"/>
 
 <CollectionSelector @ref="@cs" SelectedItems="@SelectedItems" Rerender="@StateHasChanged"/>
 
@@ -214,11 +214,11 @@ Items can be selected, and depending on the page, different options may be appli
 	[Parameter]
 	public bool PersistentHeader { get; set; }
 	
-	[Parameter]
-	public bool MemoriesPage { get; set; }
+	///Used on certain pages for page-specific elements, behavior, etc.
+	[Parameter] public string? PageName { get; set; }
 
-	[Parameter]
-	public bool TrashPage { get; set; }
+	public bool TrashPage => PageName == "Trash";
+	private bool MemoriesPage => PageName == "Memories";
 	
 	private GroupBy groupBy;
 	private GroupBy GroupBy
