--- a/MemoryMosaic/Pages/LCV/CollectionView.razor
+++ b/MemoryMosaic/Pages/LCV/CollectionView.razor
@@ -113,6 +113,7 @@
 	{
 		await C.ToggleReadonlyAsync(collection ?? throw new InvalidOperationException());
 		collection.ReadOnly = !collection.ReadOnly;
+		NewCollectionName = collection.Name;
 		await InvokeAsync(StateHasChanged);
 	}
 
