Fix conflicting element IDs between CS and CV

--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -5,7 +5,7 @@
 
 <ModalBackground Visibility="@Visibility">
     <div id="collection-selector">
-        <div id="header">
+        <div>
             <span>Add to</span>
             <div>
                 <IconButton Icon="close" OnClick="@CloseBtnClick"/>
