Rename and refactor variables in Settings into auto-properties

--- a/MemoryMosaic/Pages/LCV/CollectionView.razor
+++ b/MemoryMosaic/Pages/LCV/CollectionView.razor
@@ -136,7 +136,7 @@
 
 	private void DeleteCollectionBtnClick()
 	{
-		if (S.showPrompts == false)
+		if (S.ShowPrompts == false)
 		{
 			DeleteCollection();
 			return;
