--- a/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
@@ -23,8 +23,8 @@
             string ext = Path.GetExtension(path).ToLower();
             string name = Path.GetFileName(path);
 
-            string shortPath = path.Replace(S.libFolderPath, "").Replace('\\', '/');
-            shortPath = Path.GetFileName(S.libFolderPath) + shortPath;
+            string shortPath = path.Replace(S.LibFolderPath, "").Replace('\\', '/');
+            shortPath = Path.GetFileName(S.LibFolderPath) + shortPath;
 
             <div>
                 @if (ext is ".jpg" or ".jpeg" or ".png" or ".gif")
@@ -51,7 +51,7 @@
     private void MoveBtnClick(int index)
     {
         string path = untrackedFiles[index];
-        File.Move(path, Path.Combine(S.importFolderPath, Path.GetFileName(path)));
+        File.Move(path, Path.Combine(S.ImportFolderPath, Path.GetFileName(path)));
         untrackedFiles.RemoveAt(index);
     }
 
@@ -59,7 +59,7 @@
     private void MoveAll()
     {
         foreach (string path in untrackedFiles)
-            File.Move(path, Path.Combine(S.importFolderPath, Path.GetFileName(path)));
+            File.Move(path, Path.Combine(S.ImportFolderPath, Path.GetFileName(path)));
         untrackedFiles.Clear();
     }
 
