Change some `== false` into using `!`

--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -448,7 +448,7 @@
 
 				@* for (int a = 0; a < CS.checkedAlbums.Count; a++) *@
 				@* { *@
-					@* if (CS.checkedAlbums[a] == false) continue; *@
+					@* if (!CS.checkedAlbums[a]) continue; *@
 					@* file.collections.Add(CS.albums[a]); *@
 				@* } *@
 			@* } *@
