--- a/MemoryMosaic/_Imports.razor
+++ b/MemoryMosaic/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -13,5 +13,5 @@
 @using MemoryMosaic.Shared.Import
 @using MemoryMosaic.Shared.Input
 @using MemoryMosaic.Shared.LibraryContentViewer
-@using MemoryMosaic.Shared.FullscreenViewer
 @using MemoryMosaic.Shared.Modal
+@using MemoryMosaic.Shared.Modal.FullscreenViewer
