Add comment to top of ModalBackground.razor clarifying its inheritance

--- a/MemoryMosaic/Shared/Modal/ModalBackground.razor
+++ b/MemoryMosaic/Shared/Modal/ModalBackground.razor
@@ -1,3 +1,4 @@
+@* This deliberately doesn't inherit from ToggleableComponent. Makes it easier in the children of ToggleableComponent/ModalBackground as we can just pass in their Visibility field without making an ElementVisibility or something for ModalBackground. *@
 @inherits Component
 
 <link href="css/Components/Modal/ModalBackground.css" rel="stylesheet"/>
