Fix some components not using parameters like Style and Title
*Only the components where it'd make sense to use these fields were updated.

--- a/MemoryMosaic/Shared/Buttons/LinkButton.razor
+++ b/MemoryMosaic/Shared/Buttons/LinkButton.razor
@@ -1,6 +1,6 @@
 @inherits IconTextButton
 
-<a id="@ID" class="iconTextBtn @Class" href="@Href" @onclick="@HandleClick" title="@Title">
+<a id="@ID" class="iconTextBtn @Class" style="@Style" href="@Href" @onclick="@HandleClick" title="@Title">
 	<MaterialIcon Icon="@Icon" IconStyle="@IconStyle"/>
 	<span style="@TextStyle">@Text</span>
 </a>
