--- a/MemoryMosaic/Shared/Modal/Dropdown.razor
+++ b/MemoryMosaic/Shared/Modal/Dropdown.razor
@@ -2,7 +2,7 @@
 
 <link href="css/Components/Modal/Dropdown.css" rel="stylesheet"/>
 
-<div class="dropdown" style="@Visibility.Style; @Positioning">
+<div id="@ID" class="dropdown @Class" style="@Visibility.Style; @Positioning; @Style" title="@Title">
 	@ChildContent
 </div>
 
