--- a/MemoryMosaic/Shared/Modal/ShortcutsReference.razor
+++ b/MemoryMosaic/Shared/Modal/ShortcutsReference.razor
@@ -1,9 +1,9 @@
-@* Overlay thing for showing all the shortcuts in PSS *@
+@* Overlay thing for showing all the shortcuts in MM *@
 @inherits ToggleableComponent
 <link href="css/Components/Modal/ShortcutsReference.css" rel="stylesheet"/>
 
 <ModalBackground Visibility="@Visibility">
-	<div id="shortcutsReference">
+	<div id="shortcutsReference" class="@Class" title="@Title">
 		<span>Keyboard Shortcuts</span>
 
 		<div>
