--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -3,7 +3,7 @@
 
 <link href="css/Components/CollectionCreator.css" rel="stylesheet"/>
 
-<div id="collectionCreator" class="@Class">
+<div id="collectionCreator" class="@Class" style="@Style" title="@Title">
     <IconButton Icon="@newCollectionBtnIcon" OnClick="@NewCollectionBtnClick" Title="@newCollectionBtnTitle"/>
     
     @if (acceptingInput)
