--- a/MemoryMosaic/Shared/Modal/TwoChoiceInput.razor
+++ b/MemoryMosaic/Shared/Modal/TwoChoiceInput.razor
@@ -5,7 +5,7 @@
 <link href="css/Components/Modal/TwoChoiceInput.css" rel="stylesheet"/>
 
 <ModalBackground Visibility="@Visibility">
-    <div id="inputDiv">
+    <div id="inputDiv" class="@Class" style="@Style" title="@Title">
         <span id="message">@Message</span>
         <div id="buttons">
             <IconTextButton Icon="@NoBtnIcon" Text="@NoBtnText" OnClick="@NoBtnClick"/>
